--- a/src/app/components/profile/theme/theme-settings.scss
+++ b/src/app/components/profile/theme/theme-settings.scss
@@ -1,8 +1,16 @@
 @use 'variables' as *;
 
-/* ======================================= */
-/* ESTILOS CONSISTENTES DO CABEÇALHO       */
-/* ======================================= */
+:host {
+  display: block;
+  flex-direction: column;
+  height: 100%;
+  flex-grow: 1;
+  justify-content: center;
+  overflow: hidden;
+  overflow-y: auto;
+  padding: 0 1rem;
+}
+
 .page-header {
   display: none;
 
@@ -30,9 +38,6 @@
   font-size: 0.9rem;
 }
 
-/* ======================================= */
-/* OPÇÕES DE TEMA                          */
-/* ======================================= */
 .theme-options {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -68,4 +73,21 @@
       color: var(--primary-text-color);
     }
   }
+}
+
+:host::-webkit-scrollbar {
+  width: 8px;
+}
+
+:host::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+:host::-webkit-scrollbar-thumb {
+  background-color: var(--secondary-text-color);
+  border-radius: 10px;
+}
+
+:host::-webkit-scrollbar-thumb:hover {
+  background-color: var(--primary-text-color);
 }
