--- a/src/app/components/profile/update-profile/update-profile.scss
+++ b/src/app/components/profile/update-profile/update-profile.scss
@@ -1,15 +1,15 @@
 @use 'variables' as *;
 
-:host, .form-wrapper {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-}
 
 :host {
   display: flex;
   flex-direction: column;
   height: 100%;
+  flex-grow: 1;
+  justify-content: center;
+  overflow: hidden;
+  overflow-y: auto;
+  padding: 0 1rem;
 }
 
 .form-wrapper {
@@ -77,6 +77,23 @@ h1 {
   justify-content: center;
   align-items: center;
   min-height: 200px;
+}
+
+:host::-webkit-scrollbar {
+  width: 8px;
+}
+
+:host::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+:host::-webkit-scrollbar-thumb {
+  background-color: var(--secondary-text-color);
+  border-radius: 10px;
+}
+
+:host::-webkit-scrollbar-thumb:hover {
+  background-color: var(--primary-text-color);
 }
 
 @media (min-width: 769px) {
