--- a/src/app/pages/profile/profile.scss
+++ b/src/app/pages/profile/profile.scss
@@ -3,9 +3,14 @@
 
 :host {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  overflow-y: auto;
+  padding: 0 1rem;
   flex-grow: 1;
+  height: 100%;
   width: 100%;
 }
 
@@ -24,6 +29,9 @@
   border-radius: 8px;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  overflow: hidden;
+  overflow-y: auto;
 }
 
 .content-area {
@@ -82,9 +90,29 @@ a {
   align-items: center;
   text-align: center;
   flex-grow: 1;
+  height: 100%;
+  overflow: hidden;
+  overflow-y: auto;
 }
 .main-title { font-size: 2.5rem; font-weight: bold; color: var(--primary-text-color); margin: 0; }
 .subtitle { font-size: 1rem; margin-top: 0.5rem; color: var(--secondary-text-color); }
+
+:host::-webkit-scrollbar, .sidebar::-webkit-scrollbar, .welcome-container::-webkit-scrollbar {
+  width: 8px;
+}
+
+:host::-webkit-scrollbar-track, .sidebar::-webkit-scrollbar-track, .welcome-container::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+:host::-webkit-scrollbar-thumb, .sidebar::-webkit-scrollbar-thumb, .welcome-container::-webkit-scrollbar-thumb {
+  background-color: var(--secondary-text-color);
+  border-radius: 10px;
+}
+
+:host::-webkit-scrollbar-thumb:hover, .sidebar::-webkit-scrollbar-thumb:hover, .welcome-container::-webkit-scrollbar-thumb:hover {
+  background-color: var(--primary-text-color);
+}
 
 /* ================ */
 /*      MOBILE      */
